fixes menu collapse on click on mobile only

--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -4,6 +4,11 @@
 //iphone
 @media #{$small-only} {
 
+	nav ul li,
+	nav ul li a {
+		width: 100%;
+	}
+
   .header-text h1 {
   	margin-top: $base-margin;
   }
@@ -46,10 +51,6 @@
 }
 
 @media #{$medium-up} { 
-
-	nav ul li a {
-		width: 14%;
-	}
 
   .about-wrapper {
   	border-right: 2px solid $white;
