--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1047,6 +1047,7 @@ nav ul {
 }
 nav ul li {
   display: inline-block;
+  width: auto;
 }
 nav ul li:last-of-type {
   margin-right: 0;
@@ -1059,7 +1060,6 @@ nav ul li #mobile-menu {
   margin-right: 40px;
   font-size: 1em;
   display: inline-block;
-  width: 14%;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
